examples/test/testpolicy15448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15448
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key35: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value6
          key5: value7
      podSelector:
        matchLabels:
          key39: value23
          key48: value20
